--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "browser.js"
   ],
   "dependencies": {
-    "dezalgo": "~1.0.3",
+    "browser-async-store": "~1.0.0",
     "global": "~4.3.0",
     "has-local-storage": "~1.0.0",
     "has-session-storage": "~1.0.0",
