--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "global": "~4.3.0",
     "has-local-storage": "~1.0.0",
     "has-session-storage": "~1.0.0",
-    "localStorage": "~1.0.3"
+    "storage-sham": "~1.0.0"
   }
 }
